@@ -1,0 +1,28 @@
+# Copyright (C) 2008  Alex Schroeder <alex@gnu.org>
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+# General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program. If not, see <http://www.gnu.org/licenses/>.
+
+require 't/test.pl';
+package OddMuse;
+use Test::More tests => 1;
+
+clear_pages();
+add_module('sitemap.pl');
+
+update_page('test', 'foo');
+
+$page = get_page('action=sitemap');
+$page =~ s! xmlns="http://www.sitemaps.org/schemas/sitemap/0.9"!!;
+xpath_test($page,
+	   '//urlset/url/loc[text()="http://localhost/wiki.pl/test"]');
